<resources>
    <string name="app_name">GeoQuiz</string>

    <string name="question1_text">Canberra is the capital of Australia.</string>
    <string name="question2_text">The Pacific Ocean is larger than the Atlantic Ocean. </string>
    <string name="question3_text">The Suez Canal connects the Red Sea and the Indian Ocean. </string>
    <string name="question4_text">The source of the Nile River is in Egypt.</string>
    <string name="question5_text">The Amazon River is the longest river in the Americas. </string>
    <string name="question6_text">Lake Baikal is the world\'s oldest and deepest freshwater lake. </string>

    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>

    <string name="api_level">API level </string>
    <string name="hunts">Hunts</string>

    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="back_button">Back</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!
</string>
</resources>